feat: add home hover anchor to all pages

--- a/contact.html
+++ b/contact.html
@@ -52,6 +52,7 @@
 <!-- start of main content -->
     <main>
     <section>
+        <button class="btn-sm" id="myHomeBtn" title="Go to top of page">Top</button>
             <div class="container-fluid">
                 <div class="row section-details no-gutters solid-border">  
                     <br>
@@ -111,7 +112,7 @@
 <!-- Modal content for success -->
                     <div class="contact-modal-content">
                         <h2 class="sub-title top-pad">Message Received!</h2>
-                        <div class ="center-img">
+                        <div class ="center-content">
                             <br>
                             <a href="index.html">                     
                             <img class="logo-img" src="assets/images/ribbon.png"
@@ -125,7 +126,7 @@
                         <h2 class="modal-text">and I aim to respond within 48 Hours.</h2>
                         <br>
                         <br>
-                        <div class=" center-img">
+                        <div class=" center-content">
                         <button id="success" onclick="closeModal(this.id)" class="btn btn-secondary modal-btn hvr-grow">Close</button>
                         </div>
                     </div>        
@@ -134,7 +135,7 @@
 <!-- Modal content if email send fails-->
                     <div class="contact-modal-content">
                         <h2 class="sub-title top-pad">Message failed to send!</h2>
-                        <div class ="center-img">
+                        <div class ="center-content">
                             <br> 
                             <a href="index.html">                      
                             <img class="logo-img" src="assets/images/broken_rainbow.png"
@@ -151,7 +152,7 @@
                             or if that doesn't work directly at webdev1961@gmail.com.</h2>
                         <br>
                         <br>
-                        <div class=" center-img">
+                        <div class=" center-content">
                                 <button id="failure" onclick="closeModal(this.id)"  class="btn btn-secondary modal-btn hvr-grow">Close</button>
                         </div>
                     </div>
@@ -178,7 +179,7 @@
 <!-- Social Media Links   -->
             <div class="col-sm-6">
                 <h3 class="uppercase sub-title">Social</h3>
-                <ul class="list-inline social-links">
+                <ul class="center-content social-links">
                 <li class="list-inline-item">
                     <a target="_blank" href="https://www.facebook.com/NationalAutisticSociety/?locale=en_GB" aria-label="Go to my Facebook page (opens in a new tab)" class="hvr-grow">
                         <i class="fa fa-facebook" aria-hidden="true"></i>
