--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
         </div>
         <div class="row bottom-pad">
             <div class="center">
-            <a id="start-of-index"></a>
     <!-- button colors to replicate the Autism jigsaw logo -->
               <a class="btn btn-lg active btn-home" aria-label="This is the current page, home">Home</a>
               <a class="btn btn-lg btn-danger" aria-label="Go to the Myth Buster page (opens in a new tab)" href="myth.html">Myths</a>
@@ -45,6 +44,7 @@
 
     <main>
     <section>
+        <button class="btn-sm" id="myHomeBtn" title="Go to top of page">Top</button>
         <div class="container-fluid">
             <div class="row section-details no-gutters solid-border">  
                 <br>
@@ -109,7 +109,7 @@
                             Autism is a spectrum condition and affects people in different ways. Like all people, autistic people have their own strengths and weaknesses. 
                             The definition of Autism has changed over time and continues to change.
                         </p>
-                        <p class="center-text">
+                        <p class="center-content">
                             <img class="img-reduce img-responsive" src="assets/images/aut-modified.png"
                             alt="asd spectrum"
                             aria-label="autism spectrum disorder spectrum rainbow with categories.">
@@ -137,7 +137,7 @@
                             Spectrum is often replaced by constellation as spectrum implies a degree of severity across all difficulties when in fact a person may be
                              quite challenged in one area but excel in another.
                         </p>
-                        <p class="center-text">
+                        <p class="center-content">
                             <img class="img-reduce img-responsive" src="assets/images/neurodiversity.png"
                             alt="Autism neurodiversoty Logo"
                             aria-label="Multicoloured infinity figure with the title neurodiversity.">
@@ -166,7 +166,7 @@
                                     The only clinical difference between Autism and Asperger’s is speech delay around speech milestones,
                                      and that does not necessarily mean mutism or selective mutism—it could literally mean partly delayed speech.
                                 </p>
-                                <p class="center-text">
+                                <p class="center-content">
                                     <img class="img-reduce img-responsive" src="assets/images/high-low-mod.png"
                                     alt="high low graph"
                                     aria-label="Image identifying high and low traits and public perception.">
@@ -188,14 +188,14 @@
                     So, To Aspergers or ...</button>
                     <div class="content-hidden" id="autism4"> 
                         <div>
-                            <p class="center-text">
+                            <p class="center-content">
                                 not to Aspbergers..
                             </p>
                             <p>
                                 There are myths around Asperger’s that stem from the original decisions by Hans Asperger, who chose to separate the intelligent from the not-so intelligent.
                                  (The Nazi government funded and directed him, and that’s a whole other story and a reason many now avoid the term altogether.)
                             </p>
-                            <p class="center-text">
+                            <p class="center-content">
                                 <img class="img-reduce img-responsive" src="assets/images/batman.png"
                                 alt="batman symbol"
                                 aria-label="batman symbol in autism colors.">
@@ -220,13 +220,13 @@
                      I'm an individual, and..</button>
                     <div class="content-hidden" id="autism5">
                             <div>
-                                <p class="center-text">
+                                <p class="center-content">
                                     So am I......
                                 </p>
                                 <p>
                                     We are all different, and function differently on a daily basis.
                                 </p>
-                                <p class="center-text">
+                                <p class="center-content">
                                     <img class="img-reduce img-responsive" src="assets/images/montage.jpg"
                                     alt="montage of 3 people"
                                     aria-label="montage of 3 famous autistic peopele. einstenin jobs.">
@@ -252,7 +252,7 @@
                                 There are no separate High Functioning and Low Functioning people. Asperger’s and Autism are indistinguishable from each other, and so are the same.
                                  There is no mild Autism, or severe Autism; there is only Autism and the ability of the individual to prevent societal norms from crippling them.
                             </p>
-                            <p class="center-text">
+                            <p class="center-content">
                                 <img class="img-small img-responsive" src="assets/images/Func_labels.png"
                                 alt="functional label Logo"
                                 aria-label="Image identifying the unhelpfuless of functional labels.">
@@ -274,7 +274,7 @@
                     When you've met one ..</button>
                     <div class="content-hidden" id="autism7">
                         <div>
-                            <p class="center-text">
+                            <p class="center-content">
                                 Autistic person..
                             </p>
                             <p>
@@ -307,7 +307,7 @@
                                 The puzzle pattern represents the complexity of the autism spectrum, and the use of primary colours symbolises
                                  the diversity of people living with autism and their families.
                             </p>
-                            <p class="center-text">
+                            <p class="center-content">
                                 <img class="img-narrow img-responsive" src="assets/images/missing_piece.png"
                                 alt="missing piece logo"
                                 aria-label="protest logo stating we were never missing pieces.">
@@ -329,7 +329,7 @@
                     I stim, You stim...</button>
                     <div class="content-hidden" id="autism9">
                             <div>
-                            <p class="center-text">
+                            <p class="center-content">
                                 ....We all stim together.
                             </p>    
                             <p>
@@ -337,7 +337,7 @@
                                  finger-flicking, rocking, jumping, spinning or twirling, humming, head-banging and complex body movements.
                                   Almost always present in Autism, but we all do it; just to a lesser extent.
                             </p>
-                            <p class="center-text">
+                            <p class="center-content">
                                 <img class="img-reduce img-responsive" src="assets/images/stim.png"
                                 alt="stim logo"
                                 aria-label="graphic of 6 examples of stimming">
@@ -371,7 +371,7 @@
                     <h2 class="sub-title">Want to learn more?</h2>
                     <p class ="text-blue">Head on to the next page <a href="myth.html">'Myths or fact'</a> to learn about the various and oft quoted incorrect understanding and beliefs 
                     about Autism. Alternatively or afterwards try <a href="quiz.html">The Quiz.</a>
-                    To go to the top of this page click <a rel="noopener" href="#start-of-index">HERE</a></p>
+                    </p>
                     <br>
                 </div>
             </div>
@@ -392,7 +392,7 @@
 <!-- Social Media Links   -->
             <div class="col-sm-6">
                 <h3 class="uppercase sub-title">Social</h3>
-                <ul class="list-inline social-links">
+                <ul class="center-content social-links">
                     <li class="list-inline-item">
                         <a target="_blank" href="https://www.facebook.com/NationalAutisticSociety/?locale=en_GB" aria-label="Go to my Facebook page (opens in a new tab)" class="hvr-grow">
                             <i class="fa fa-facebook" aria-hidden="true"></i>
