--- a/myth.html
+++ b/myth.html
@@ -28,7 +28,6 @@
                 </div>
             </div> 
         </div>
-        <a id="start-of-myths"></a>
         <div class="row bottom-pad">
             <div class="center">
     <!-- button colors to replicate the Autism jigsaw logo -->
@@ -45,6 +44,7 @@
 
     <main>
         <section>
+            <button class="btn-sm" id="myHomeBtn" title="Go to top of page">Top</button>
             <div class="container-fluid">
                 <div class="row section-details no-gutters solid-border">  
                     <br>
@@ -133,7 +133,7 @@
                                 Eat exactly the same food for breakfast, or lunch or dinner...
                             </li>
                         </ul>
-                        <p class="center-text">
+                        <p class="center-content">
                             Why not check out the top 10 myths about Autism below. 
                             Click on a myth to flip it and learn the truth. 
                         </p>
@@ -419,9 +419,9 @@
                     <div class="col-xl-6">
                         <div class="row no-gutters solid-border"></div>
                         <br>
-                        <h3 class="blue-text center-text">I'll add an 11th but it really should be number 1</h3>
+                        <h3 class="blue-text center-content">I'll add an 11th but it really should be number 1</h3>
                         <br>
-                        <h3 class="purple-text center-text font-weight-bold">
+                        <h3 class="purple-text center-content font-weight-bold">
                             We're all a bit autistic aren't we?
                         </h3>
                         <p>
@@ -441,7 +441,6 @@
                         </p>
                         <p>
                             Why not head over to the <a href="quiz.html">quiz page</a> and see how you get on. 
-                            To go to the top of this page click <a rel="noopener" href="#start-of-myths">HERE.</a>
                         </p>
                         <br>
                     </div>
@@ -464,7 +463,7 @@
 <!-- Social Media Links   -->
         <div class="col-sm-6">
             <h4 class="uppercase sub-title">Social</h4>
-            <ul class="list-inline social-links">
+            <ul class="center-content social-links">
                 <li class="list-inline-item">
                     <a target="_blank" href="https://www.facebook.com/NationalAutisticSociety/?locale=en_GB" aria-label="Go to my Facebook page (opens in a new tab)" class="hvr-grow">
                         <i class="fa fa-facebook" aria-hidden="true"></i>
