--- a/quiz.html
+++ b/quiz.html
@@ -30,11 +30,11 @@
         </div>
         <div class="row bottom-pad">
             <div class="center">
-            <a id="start-of-quiz"></a>
     <!-- button colors to replicate the Autism jigsaw logo -->
               <a class="btn btn-lg btn-home" aria-label="Go to the home page (opens in a new tab)" href="index.html">Home</a>
               <a class="btn btn-lg btn-danger" aria-label="Go to the Myth Buster page (opens in a new tab)" href="myth.html">Myths</a>
-              <a class="btn btn-lg active btn-quiz" aria-label="This is the current page, quiz">Quiz</a>
+              <a class="btn btn-lg active btn-quiz" aria-label="This is the current page, quiz"
+              >Quiz</a>
               <a class="btn btn-lg btn-contact" aria-label="Go to the contacts page (opens in a new tab)" href="contact.html">Contact</a>
             </div>
         </div>    
@@ -45,6 +45,7 @@
 
     <main>
         <section>
+            <button class="btn-sm" id="myHomeBtn" title="Go to top of page">Top</button>
             <div class="container-fluid">
                 <div class="row section-details no-gutters solid-border">  
                     <br>
@@ -73,17 +74,12 @@
                                 <p>
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni placeat nam minus magnam velit, quod fuga inventore, rerum, vitae veniam pariatur. Totam ab quae a culpa iure magnam, molestiae accusamus!.
                                 </p>
-                                <p>
-                                    To go to the top of this page, click <a rel="noopener" href="#start-of-quiz">HERE.</a>
-                                </p>
                             </div>
                         </div>
                     </div>                   
                 </div>            
             </div>     
         </section>  
-
-
     </main>
     <footer>
  <!-- direct email or link to comments page -->
@@ -99,7 +95,7 @@
 <!-- Social Media Links   -->
         <div class="col-sm-6">
             <h3 class="uppercase sub-title">Social</h3>
-            <ul class="list-inline social-links">
+            <ul class="center-content social-links">
                 <li class="list-inline-item">
                     <a target="_blank" href="https://www.facebook.com/NationalAutisticSociety/?locale=en_GB" aria-label="Go to my Facebook page (opens in a new tab)" class="hvr-grow">
                         <i class="fa fa-facebook" aria-hidden="true"></i>
