--- a/whatif.html
+++ b/whatif.html
@@ -44,7 +44,7 @@
 
  <main>
     <section>
-
+        <button class="btn-sm" id="myHomeBtn" title="Go to top of page">Top</button>
 <!-- start of main page content -->
 <!-- first 2 entries -->
         <div class="container-fluid">
