feat: add basic quiz functionlity

--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
                 </div>
             </div> 
         </div>
-        <div class="row bottom-pad">
+        <div class="row pb-3">
             <div class="center">
 <!-- button colors to replicate the Autism jigsaw logo -->
               <a class="btn btn-lg btn-home" aria-label="Go to the home page (opens in a new tab)" href="index.html">Home</a>
@@ -111,9 +111,8 @@
                 <div id="success-modal" class="modal">
 <!-- Modal content for success -->
                     <div class="contact-modal-content">
-                        <h2 class="sub-title top-pad">Message Received!</h2>
+                        <h2 class="sub-title py-4">Message Received!</h2>
                         <div class ="center-content">
-                            <br>
                             <a href="index.html">                     
                             <img class="logo-img" src="assets/images/ribbon.png"
                                 alt="Autism Ribbon Logo"
@@ -134,9 +133,8 @@
                 <div id="failure-modal" class="modal">
 <!-- Modal content if email send fails-->
                     <div class="contact-modal-content">
-                        <h2 class="sub-title top-pad">Message failed to send!</h2>
+                        <h2 class="sub-title py-4">Message failed to send!</h2>
                         <div class ="center-content">
-                            <br> 
                             <a href="index.html">                      
                             <img class="logo-img" src="assets/images/broken_rainbow.png"
                             alt="broken rainbow"
