--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </div>
             </div> 
         </div>
-        <div class="row bottom-pad">
+        <div class="row pb-3">
             <div class="center">
     <!-- button colors to replicate the Autism jigsaw logo -->
               <a class="btn btn-lg active btn-home" aria-label="This is the current page, home">Home</a>
