--- a/myth.html
+++ b/myth.html
@@ -28,7 +28,7 @@
                 </div>
             </div> 
         </div>
-        <div class="row bottom-pad">
+        <div class="row pb-3">
             <div class="center">
     <!-- button colors to replicate the Autism jigsaw logo -->
               <a class="btn btn-lg btn-home" aria-label="Go to the Home page (opens in a new tab)" href="index.html">Home</a>
