--- a/404.html
+++ b/404.html
@@ -29,7 +29,7 @@
                         </div>
                     </div> 
                 </div>
-                <div class="row bottom-pad">
+                <div class="row pb-3">
                     <div class="center">
             <!-- button colors to replicate the Autism jigsaw logo -->
                       <a class="btn btn-lg btn-home" aria-label="Go to the home page (opens in a new tab)" href="index.html">Home</a>
