--- a/quiz.html
+++ b/quiz.html
@@ -28,7 +28,7 @@
                 </div>
             </div> 
         </div>
-        <div class="row bottom-pad">
+        <div class="row pb-3">
             <div class="center">
     <!-- button colors to replicate the Autism jigsaw logo -->
               <a class="btn btn-lg btn-home" aria-label="Go to the home page (opens in a new tab)" href="index.html">Home</a>
@@ -58,27 +58,32 @@
                         <p Class="purple-text">Once you select your answer and press 'Next', the correct andswer will be revealed and the next question will appear.</p>
                         <br>
                         <p Class="purple-text">Good Luck !</p>
+                        <br>
+                        <div class="center-content pb-5">
+                        <button class="btn btn-lg btn-primary" id="quizTrigger">
+                            Start The Quiz
+                        </button>
+                        </div>
                     </div>
                 </div>
             </div>
-    <!-- start of main page content -->
-     <!-- first 3 entries -->
             <div class="container-fluid">
                 <div class="row no-gutters section-details">        
-                    <div class="col-xl-3">
-                    </div>
-                    <div class="col-xl-6">
-                        <div class="row">
-                            <div class="col-heading">                            
-                                <h2 class="sub-title">autism 1</h2>
-                                <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni placeat nam minus magnam velit, quod fuga inventore, rerum, vitae veniam pariatur. Totam ab quae a culpa iure magnam, molestiae accusamus!.
-                                </p>
+                    <div class="quizmain">
+                        <h1 class="center-content">The Great Autism Quiz</h1>
+                        <div class="myquiz">
+                            <h2 id="question">question placeholder text</h2>
+                            <div id="answer-btns">
+                                <button class="quizBtn">placeholder answer 1</button>
+                                <button class="quizBtn">placeholder answer 2</button>
+                                <button class="quizBtn">placeholder answer 3</button>
+                                <button class="quizBtn">placeholder answer 4</button>
                             </div>
+                            <button id="next-btn">Next</button>
                         </div>
-                    </div>                   
+                    </div>      
                 </div>            
-            </div>     
+            </div> 
         </section>  
     </main>
     <footer>
@@ -132,8 +137,9 @@
 </div>
 </footer>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>    
-<script type="text/javascript" src="assets/js/scripts.js"></script>
-    <script src="https://kit.fontawesome.com/6e6c671d1b.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+<script src="assets/js/quiz.js"></script>
+<script src="assets/js/scripts.js"></script>
+<script src="https://kit.fontawesome.com/6e6c671d1b.js" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
 </body>
 </html>
