amend color scheme of quiz, add additional text and function

--- a/quiz.html
+++ b/quiz.html
@@ -53,11 +53,14 @@
                     </div>
                     <div class="col-md-8 col-sm-10 col-xl-6">
                         <h2 class="sub-title">Test Your Knowledge with the Quiz</h2>
-                        <p Class="purple-text">There are 12 multiple choice questions selected at random from a bank of over 100 questions and answers.</p>
-                        <p Class="purple-text">Accuracy is more important than speed but there is a time limit of 20 seconds for each question.</p>
-                        <p Class="purple-text">Once you select your answer and press 'Next', the correct andswer will be revealed and the next question will appear.</p>
+                        <p>There are 12 multiple choice questions selected at random from a bank of over 100 questions and answers.</p>
+                        <p>Accuracy is more important than speed but there is a time limit of 20 seconds for each question.</p>
+                        <p>Once you select your answer and press 'Next', the correct answer will be revealed and the next question will appear.</p>
+                        <p>You can only select one answer perquestion and once selected, you cannot change it.</p>
+                        <p>After you have answered all 12 questions, your total score will be calculated and displayed.</p>
+                        <p>Exit the quiz and you can play again; as many times as you like. You'll be presented with a selection of random questions each time you play.</p>
                         <br>
-                        <p Class="purple-text">Good Luck !</p>
+                        <p</p>
                         <br>
                         <div class="center-content pb-5">
                         <button class="btn btn-lg btn-primary" id="quizTrigger">
@@ -70,9 +73,13 @@
             <div class="container-fluid">
                 <div class="row no-gutters section-details">        
                     <div class="quizmain">
-                        <h1 class="center-content">The Great Autism Quiz</h1>
+                        <h1>The Great</h1>
+                        <img class="img img-responsive" src="assets/images/autism-mod.png">
+                        <h2>Quiz</h2>
                         <div class="myquiz">
-                            <h2 id="question">question placeholder text</h2>
+                            <h2 id="question-number" class="center-content">question number placeholder text</h2>
+                            <br>
+                            <h3 id="question" class="center-content">question placeholder text</h3>
                             <div id="answer-btns">
                                 <button class="quizBtn">placeholder answer 1</button>
                                 <button class="quizBtn">placeholder answer 2</button>
