apply timer function to quiz

--- a/contact.html
+++ b/contact.html
@@ -126,7 +126,7 @@
                         <br>
                         <br>
                         <div class=" center-content">
-                        <button id="success" onclick="closeModal(this.id)" class="btn btn-secondary modal-btn hvr-grow">Close</button>
+                        <button id="success" class="btn btn-secondary modal-btn hvr-grow">Close</button>
                         </div>
                     </div>        
                 </div>   
@@ -151,7 +151,7 @@
                         <br>
                         <br>
                         <div class=" center-content">
-                                <button id="failure" onclick="closeModal(this.id)"  class="btn btn-secondary modal-btn hvr-grow">Close</button>
+                                <button id="failure" class="btn btn-secondary modal-btn hvr-grow">Close</button>
                         </div>
                     </div>
                 </div>
