--- a/quiz.html
+++ b/quiz.html
@@ -53,15 +53,21 @@
                     </div>
                     <div class="col-md-8 col-sm-10 col-xl-6">
                         <h2 class="sub-title">Test Your Knowledge with the Quiz</h2>
-                        <p>There are 12 multiple choice questions selected at random from a bank of over 100 questions and answers.</p>
-                        <p>Accuracy is more important than speed but there is a time limit of 20 seconds for each question.</p>
-                        <p>Once you select your answer and press 'Next', the correct answer will be revealed and the next question will appear.</p>
-                        <p>You can only select one answer perquestion and once selected, you cannot change it.</p>
+                        <button class="btn btn-block btn-icon" data-target="#quizInstructions" type="button"
+                       aria-expanded="false">
+                        Instructions</button>
+                        <div class="content-hidden" id="quizInstructions">  
+                            <p>There are 12 multiple choice questions selected at random from a bank of over 100 questions.</p>
+                        <p>Accuracy is more important than speed but there is a time limit of 30 seconds for each question. The timer turns
+                            <strong>(<span style="color:#e11a1a">red</span>)</strong> when time is running out.</p>
+                        <p>Select the answer you think is correct and it will be highlighted as correct or incorrect. Select the "next" button to progress to the next question.</p>
+                        <p>You can only select one answer per question and once selected, you cannot change it.</p>
+                        <p>If you run out of time for a question, then the correct answer is highlighted and you can move to the "next" question.
                         <p>After you have answered all 12 questions, your total score will be calculated and displayed.</p>
-                        <p>Exit the quiz and you can play again; as many times as you like. You'll be presented with a selection of random questions each time you play.</p>
+                        <p>You can play again or exit the page via the main page menu. You'll be presented with a selection of random questions each time you play.</p>
+                        <br>  
                         <br>
-                        <p</p>
-                        <br>
+                        </div>
                         <div class="center-content pb-5">
                         <button class="btn btn-lg btn-primary" id="quizTrigger">
                             Start The Quiz
@@ -73,6 +79,8 @@
             <div class="container-fluid">
                 <div class="row no-gutters section-details">        
                     <div class="quizmain">
+                        <h2 id="question-time-counter" class="text-end">Time left:</h2>
+                        <br>
                         <h1>The Great</h1>
                         <img class="img img-responsive" src="assets/images/autism-mod.png">
                         <h2>Quiz</h2>
