fix: alt decsription to quiz page, adjust headers and text align.

--- a/quiz.html
+++ b/quiz.html
@@ -81,13 +81,13 @@
                     <div class="quizmain">
                         <h2 id="question-time-counter" class="text-end">Time left:</h2>
                         <br>
-                        <h1>The Great</h1>
-                        <img class="img img-responsive" src="assets/images/autism-mod.png">
+                        <h2 class="text-left">The Great</h2>
+                        <img class="img img-responsive" alt="Autism logo" aria-label="the word Autism in multicolor" src="assets/images/autism-mod.png">
                         <h2>Quiz</h2>
                         <div class="myquiz">
-                            <h2 id="question-number" class="center-content">question number placeholder text</h2>
+                            <h2 id="question-number" class="text-center">question number placeholder text</h2>
                             <br>
-                            <h3 id="question" class="center-content">question placeholder text</h3>
+                            <h3 id="question" class="text-center">question placeholder text</h3>
                             <div id="answer-btns">
                                 <button class="quizBtn">placeholder answer 1</button>
                                 <button class="quizBtn">placeholder answer 2</button>
