update readme.md file with screenshots and text

--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
         <div class="row">
             <div class="col-12">
                 <div>
-                    <h1 class="title">Comments & Feedback<span>                        
+                    <h1 class="title">Contact & Feedback<span>                        
                         <a href="index.html"><img class="logo-img" src="assets/images/heart_logo.png"
                         alt="Autism heart Logo"
                     aria-label="Multicoloured heart image with autism awareness caption."></a></span></h1>
