Feat: apply minor color changes to quiz form

--- a/quiz.html
+++ b/quiz.html
@@ -87,7 +87,7 @@
                         <div class="myquiz">
                             <h2 id="question-number" class="text-center">question number placeholder text</h2>
                             <br>
-                            <h3 id="question" class="text-center">question placeholder text</h3>
+                            <h3 id="question" class="text-center fs-1">question placeholder text</h3>
                             <br>
                             <div id="answer-btns">
                                 <button class="quizBtn">placeholder answer 1</button>
