Fix: apply consistent colour background to 404 error page

--- a/404.html
+++ b/404.html
@@ -47,15 +47,18 @@
     <section>
         <div class="container-fluid">
             <div class="row no-gutters">
-                <div class="col-12 solid-border">
+                <div class ="col-md-2 col-sm-1 col-xl-3">
                 </div>
-                <br>
-                <br>
-                <div class="col-12 text-center contact-color">
+                    <div class="col-md-8 col-sm-10 col-xl-6 text-center section-details solid-border contact-color">
+                    <br>
                     <h2 class="font-weight-bold">Sorry, looks like</h2>
                     <h2 class="font-weight-bold">that page can't be found</h2>
-                <br>
+                    <br>
+                    <br>
                     <h2 class="font-weight-bold">Use the Menu above to go to the page you want.</h2>
+                    <br>
+                    <br>
+                    <h2 class="solid-border"></h2>
                 </div>
             </div>     
         </div>
