--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
             <div class="center">
 <!-- button colors to replicate the Autism jigsaw logo -->
               <a class="btn btn-lg btn-home" aria-label="Go to the home page (opens in a new tab)" href="index.html">Home</a>
-              <a class="btn btn-lg btn-danger" aria-label="Go to the Myth Buster page (opens in a new tab)" href="myth.html">Myths</a>
+              <a class="btn btn-lg btn-myth" aria-label="Go to the Myth Buster page (opens in a new tab)" href="myth.html">Myths</a>
               <a class="btn btn-lg btn-quiz" aria-label="This is the current page, quiz (opens in a new tab)" href="quiz.html">Quiz</a>
               <a class="btn btn-lg active btn-contact" aria-label="Go to the contacts page">Contact</a>
             </div>
