--- a/myth.html
+++ b/myth.html
@@ -32,7 +32,7 @@
             <div class="center">
     <!-- button colors to replicate the Autism jigsaw logo -->
               <a class="btn btn-lg btn-home" aria-label="Go to the Home page (opens in a new tab)" href="index.html">Home</a>
-              <a class="btn btn-lg active btn-danger" aria-label="This is the current page, Myth">Myths</a>
+              <a class="btn btn-lg active btn-myth" aria-label="This is the current page, Myth">Myths</a>
               <a class="btn btn-lg btn-quiz" aria-label="Go to the quiz page (opens in a new tab)" href="quiz.html">Quiz</a>
               <a class="btn btn-lg btn-contact" aria-label="Go to the contacts page (opens in a new tab)" href="contact.html">Contact</a>
             </div>
