Feat: add help cursor pointer to myth card front

--- a/404.html
+++ b/404.html
@@ -55,10 +55,11 @@
                     <h2 class="font-weight-bold">that page can't be found</h2>
                     <br>
                     <br>
-                    <h2 class="font-weight-bold">Use the Menu above to go to the page you want.</h2>
-                    <br>
-                    <br>
-                    <h2 class="solid-border"></h2>
+                    <h2 class="font-weight-bold">Use the Menu above to go to the page you want,</h2>
+                    <h2 class="font-weight-bold">or the Heart below to go Home.</h2>
+                    <p class="mt-5 pt-5"><a href="index.html"><img class="logo-img" src="assets/images/broken_rainbow.png"
+                        alt="boken heart Logo"
+                    aria-label="Multicoloured heart broken in two."></a></p>
                 </div>
             </div>     
         </div>
