--- a/404.html
+++ b/404.html
@@ -1,77 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="All About Autism website">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-<!-- third party css to allow half columns -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/hoomanbahreini/bootstrap-half-and-quarter-grid/fractional-grid.css" type="text/css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="icon" type="image/x-icon" href="assets/favicon/favicon.ico">
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="All About Autism website" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous" />
+    <!-- third party css to allow half columns -->
+    <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/gh/hoomanbahreini/bootstrap-half-and-quarter-grid/fractional-grid.css"
+        type="text/css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css"
+        type="text/css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="icon" type="image/x-icon" href="assets/favicon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png" />
     <title>All About Autism</title>
 </head>
+
 <body>
     <header>
         <div class="container">
-            <div class="header">    
+            <div class="header">
                 <div class="row">
                     <div class="col-12">
                         <div>
-                            <h1 class="title">Oops..... Page Not Found<span>                        
-                                <a href="index.html"><img class="logo-img" src="assets/images/jigsaw_piece.png"
-                                alt="Autism Jigsaw Logo"
-                            aria-label="Multicoloured Jigsaw piece."></a></span></h1>
+                            <h1 class="title">
+                                Oops..... Page Not Found<span>
+                                    <a href="index.html"><img class="logo-img" src="assets/images/jigsaw_piece.png"
+                                            alt="Autism Jigsaw Logo"
+                                            aria-label="Multicoloured Jigsaw piece." /></a></span>
+                            </h1>
                         </div>
-                    </div> 
+                    </div>
                 </div>
                 <div class="row pb-3">
                     <div class="center">
-            <!-- button colors to replicate the Autism jigsaw logo -->
-                      <a class="btn btn-lg btn-home" aria-label="Go to the home page (opens in a new tab)" href="index.html">Home</a>
-                      <a class="btn btn-lg btn-myth" aria-label="Go to the Myth Buster page (opens in a new tab)" href="myth.html">Myths</a>
-                      <a class="btn btn-lg btn-quiz" aria-label="Go to the quiz page (opens in a new tab)" href="quiz.html">Quiz</a>
-                      <a class="btn btn-lg btn-contact" aria-label="Go to the contacts page (opens in a new tab)" href="contact.html">Contact</a>
+                        <!-- button colors to replicate the Autism jigsaw logo -->
+                        <a class="btn btn-lg btn-home" aria-label="Go to the home page (opens in a new tab)"
+                            href="index.html">Home</a>
+                        <a class="btn btn-lg btn-myth" aria-label="Go to the Myth Buster page (opens in a new tab)"
+                            href="myth.html">Myths</a>
+                        <a class="btn btn-lg btn-quiz" aria-label="Go to the quiz page (opens in a new tab)"
+                            href="quiz.html">Quiz</a>
+                        <a class="btn btn-lg btn-contact" aria-label="Go to the contacts page (opens in a new tab)"
+                            href="contact.html">Contact</a>
                     </div>
-                </div>    
+                </div>
             </div>
         </div>
     </header>
 
-<!-- start of content -->
+    <!-- start of content -->
     <main>
-    <section>
-        <div class="container-fluid">
-            <div class="row no-gutters">
-                <div class ="col-md-2 col-sm-1 col-xl-3">
-                </div>
+        <section>
+            <div class="container-fluid">
+                <div class="row no-gutters">
+                    <div class="col-md-2 col-sm-1 col-xl-3"></div>
                     <div class="col-md-8 col-sm-10 col-xl-6 text-center section-details solid-border contact-color">
-                    <br>
-                    <h2 class="font-weight-bold">Sorry, looks like</h2>
-                    <h2 class="font-weight-bold">that page can't be found</h2>
-                    <br>
-                    <br>
-                    <h2 class="font-weight-bold">Use the Menu above to go to the page you want,</h2>
-                    <h2 class="font-weight-bold">or the Heart below to go Home.</h2>
-                    <p class="mt-5 pt-5"><a href="index.html"><img class="logo-img" src="assets/images/broken_rainbow.png"
-                        alt="boken heart Logo"
-                    aria-label="Multicoloured heart broken in two."></a></p>
+                        <br />
+                        <h2 class="font-weight-bold">Sorry, looks like</h2>
+                        <h2 class="font-weight-bold">that page can't be found</h2>
+                        <br />
+                        <br />
+                        <h2 class="font-weight-bold">
+                            Use the Menu above to go to the page you want,
+                        </h2>
+                        <h2 class="font-weight-bold">or the Heart below to go Home.</h2>
+                        <p class="mt-5 pt-5">
+                            <a href="index.html"><img class="logo-img" src="assets/images/broken_rainbow.png"
+                                    alt="boken heart Logo" aria-label="Multicoloured heart broken in two." /></a>
+                        </p>
+                    </div>
                 </div>
-            </div>     
-        </div>
-    </section>
+            </div>
+        </section>
     </main>
 
     <footer>
-<!-- No footer as this is an error page -->
+        <!-- No footer as this is an error page -->
     </footer>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="assets/js/scripts.js"></script>
     <script src="https://kit.fontawesome.com/6e6c671d1b.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous">
+    </script>
 </body>
+
 </html>
