--- a/quiz.html
+++ b/quiz.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="All About Autism website">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-<!-- third party css to allow half columns -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/hoomanbahreini/bootstrap-half-and-quarter-grid/fractional-grid.css" type="text/css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <!-- third party css to allow half columns -->
+    <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/gh/hoomanbahreini/bootstrap-half-and-quarter-grid/fractional-grid.css"
+        type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css"
+        type="text/css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="icon" type="image/x-icon" href="assets/favicon/favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
@@ -15,74 +20,84 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <title>All About Autism</title>
 </head>
+
 <body>
     <header class="container">
-    <div class="header">    
-        <div class="row">
-            <div class="col-12">
-                <div>
-                    <h1 class="title">The Great Quiz<span>                        
-                        <a href="index.html"><img class="logo-img" src="assets/images/jigsaw_piece.png"
-                        alt="Autism Jigsaw Logo"
-                    aria-label="Multicoloured Jigsaw piece."></a></span></h1>
+        <div class="header">
+            <div class="row">
+                <div class="col-12">
+                    <div>
+                        <h1 class="title">The Great Quiz<span>
+                                <a href="index.html"><img class="logo-img" src="assets/images/jigsaw_piece.png"
+                                        alt="Autism Jigsaw Logo" aria-label="Multicoloured Jigsaw piece."></a></span>
+                        </h1>
+                    </div>
                 </div>
-            </div> 
-        </div>
-        <div class="row pb-3">
-            <div class="center">
-    <!-- button colors to replicate the Autism jigsaw logo -->
-              <a class="btn btn-lg btn-home" aria-label="Go to the home page (opens in a new tab)" href="index.html">Home</a>
-              <a class="btn btn-lg btn-myth" aria-label="Go to the Myth Buster page (opens in a new tab)" href="myth.html">Myths</a>
-              <a class="btn btn-lg active btn-quiz" aria-label="This is the current page, quiz"
-              >Quiz</a>
-              <a class="btn btn-lg btn-contact" aria-label="Go to the contacts page (opens in a new tab)" href="contact.html">Contact</a>
             </div>
-        </div>    
-    </div>
+            <div class="row pb-3">
+                <div class="center">
+                    <!-- button colors to replicate the Autism jigsaw logo -->
+                    <a class="btn btn-lg btn-home" aria-label="Go to the home page (opens in a new tab)"
+                        href="index.html">Home</a>
+                    <a class="btn btn-lg btn-myth" aria-label="Go to the Myth Buster page (opens in a new tab)"
+                        href="myth.html">Myths</a>
+                    <a class="btn btn-lg active btn-quiz" aria-label="This is the current page, quiz">Quiz</a>
+                    <a class="btn btn-lg btn-contact" aria-label="Go to the contacts page (opens in a new tab)"
+                        href="contact.html">Contact</a>
+                </div>
+            </div>
+        </div>
     </header>
- 
- <!-- start of main content -->
+
+    <!-- start of main content -->
 
     <main>
         <section>
             <button class="btn-sm" id="myHomeBtn" title="Go to top of page">Top</button>
             <div class="container-fluid">
-                <div class="row section-details no-gutters solid-border">  
+                <div class="row section-details no-gutters solid-border">
                     <br>
-                    <div class ="col-md-2 col-sm-1 col-xl-3">
+                    <div class="col-md-2 col-sm-1 col-xl-3">
                     </div>
                     <div class="col-md-8 col-sm-10 col-xl-6">
                         <h2 class="sub-title">Test Your Knowledge with the Quiz</h2>
                         <button class="btn btn-block btn-icon" data-target="#quizInstructions" type="button"
-                       aria-expanded="false">
-                        Instructions</button>
-                        <div class="content-hidden" id="quizInstructions">  
-                            <p>There are 12 multiple choice questions selected at random from a bank of over 100 questions.</p>
-                        <p>Accuracy is more important than speed but there is a time limit of 30 seconds for each question. The timer turns
-                            <strong>(<span style="color:#e11a1a">red</span>)</strong> when time is running out.</p>
-                        <p>Select the answer you think is correct and it will be highlighted as correct or incorrect. Select the "next" button to progress to the next question.</p>
-                        <p>You can only select one answer per question and once selected, you cannot change it.</p>
-                        <p>If you run out of time for a question, then the correct answer is highlighted and you can move to the "next" question.
-                        <p>After you have answered all 12 questions, your total score will be calculated and displayed.</p>
-                        <p>You can play again or exit the page via the main page menu. You'll be presented with a selection of random questions each time you play.</p>
-                        <br>  
-                        <br>
+                            aria-expanded="false">
+                            Instructions</button>
+                        <div class="content-hidden" id="quizInstructions">
+                            <p>There are 12 multiple choice questions selected at random from a bank of over 100
+                                questions.</p>
+                            <p>Accuracy is more important than speed but there is a time limit of 30 seconds for each
+                                question. The timer turns
+                                <strong>(<span style="color:#e11a1a">red</span>)</strong> when time is running out.</p>
+                            <p>Select the answer you think is correct and it will be highlighted as correct or
+                                incorrect. Select the "next" button to progress to the next question.</p>
+                            <p>You can only select one answer per question and once selected, you cannot change it.</p>
+                            <p>If you run out of time for a question, then the correct answer is highlighted and you can
+                                move to the "next" question.
+                                <p>After you have answered all 12 questions, your total score will be calculated and
+                                    displayed.</p>
+                                <p>You can play again or exit the page via the main page menu. You'll be presented with
+                                    a selection of random questions each time you play.</p>
+                                <br>
+                                <br>
                         </div>
                         <div class="center-content pb-5">
-                        <button class="btn btn-lg btn-primary" id="quizTrigger">
-                            Start The Quiz
-                        </button>  
-                    </div>
+                            <button class="btn btn-lg btn-primary" id="quizTrigger">
+                                Start The Quiz
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="container-fluid">
-                <div class="row no-gutters section-details">        
+                <div class="row no-gutters section-details">
                     <div class="quizmain">
                         <h2 id="question-time-counter" class="text-end">Time left:</h2>
                         <br>
                         <h2 class="text-left">The Great</h2>
-                        <img class="img img-responsive" alt="Autism logo" aria-label="the word Autism in multicolor" src="assets/images/autism-mod.png">
+                        <img class="img img-responsive" alt="Autism logo" aria-label="the word Autism in multicolor"
+                            src="assets/images/autism-mod.png">
                         <h2>Quiz</h2>
                         <div class="myquiz">
                             <h2 id="question-number" class="text-center">question number placeholder text</h2>
@@ -98,65 +113,77 @@
                             <br>
                             <button id="next-btn">Next</button>
                         </div>
-                    </div>      
-                </div>            
-            </div> 
-        </section>  
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
- <!-- direct email or link to comments page -->
- <div class="container-fluid">
-    <div id="footer-details" class="row no-gutters solid-border">
-        <div class="col-sm-6">
-            <h3 class="uppercase sub-title">Contact</h3>
-            <p class="foot-title">                    
-                <a href="contact.html" class="hvr-grow " aria-label="go to my comments, feedback page (opens in a new tab)">Go To The Commments Page</a>
-            </p>
-            <br>
+        <!-- direct email or link to comments page -->
+        <div class="container-fluid">
+            <div id="footer-details" class="row no-gutters solid-border">
+                <div class="col-sm-6">
+                    <h3 class="uppercase sub-title">Contact</h3>
+                    <p class="foot-title">
+                        <a href="contact.html" class="hvr-grow "
+                            aria-label="go to my comments, feedback page (opens in a new tab)">Go To The Commments
+                            Page</a>
+                    </p>
+                    <br>
+                </div>
+                <!-- Social Media Links   -->
+                <div class="col-sm-6">
+                    <h3 class="uppercase sub-title">Social</h3>
+                    <ul class="center-content social-links">
+                        <li class="list-inline-item">
+                            <a target="_blank" href="https://www.facebook.com/NationalAutisticSociety/?locale=en_GB"
+                                aria-label="Go to my Facebook page (opens in a new tab)" class="hvr-grow">
+                                <i class="fa fa-facebook" aria-hidden="true"></i>
+                                <span class="sr-only">Facebook</span>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a target="_blank"
+                                href="https://x.com/Autism?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"
+                                aria-label="Go to my Twitter X account (opens in a new tab)" class="hvr-grow">
+                                <i class="fa-brands fa-x-twitter" aria-hidden="true"></i>
+                                <span class="sr-only">Twitter</span>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a target="_blank" href="https://uk.linkedin.com/company/national-autistic-society"
+                                aria-label="Go to my LinkedIn page (opens in a new tab)" class="hvr-grow">
+                                <i class="fa fa-linkedin" aria-hidden="true"></i>
+                                <span class="sr-only">LinkedIn</span>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a target="_blank" href="https://www.youtube.com/user/nationalautisticsoc"
+                                aria-label="Go to my Youtube channel (opens in a new tab)" class="hvr-grow">
+                                <i class="fa fa-youtube" aria-hidden="true"></i>
+                                <span class="sr-only">YouTube</span>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a target="_blank" href="https://www.autism.org.uk/"
+                                aria-label="Go to the national autistic society web site (opens in a new tab)"
+                                class="hvr-grow">
+                                <i class="fa-brands fa-internet-explorer" aria-hidden="true"></i>
+                                <span class="sr-only">Vimeo</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
-<!-- Social Media Links   -->
-        <div class="col-sm-6">
-            <h3 class="uppercase sub-title">Social</h3>
-            <ul class="center-content social-links">
-                <li class="list-inline-item">
-                    <a target="_blank" href="https://www.facebook.com/NationalAutisticSociety/?locale=en_GB" aria-label="Go to my Facebook page (opens in a new tab)" class="hvr-grow">
-                        <i class="fa fa-facebook" aria-hidden="true"></i>
-                        <span class="sr-only">Facebook</span>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a target="_blank" href="https://x.com/Autism?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" aria-label="Go to my Twitter X account (opens in a new tab)" class="hvr-grow">
-                        <i class="fa-brands fa-x-twitter" aria-hidden="true"></i>
-                        <span class="sr-only">Twitter</span>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a target="_blank" href="https://uk.linkedin.com/company/national-autistic-society" aria-label="Go to my LinkedIn page (opens in a new tab)" class="hvr-grow">
-                        <i class="fa fa-linkedin" aria-hidden="true"></i>
-                        <span class="sr-only">LinkedIn</span>
-                    </a>
-                </li>                     
-                <li class="list-inline-item">
-                    <a target="_blank" href="https://www.youtube.com/user/nationalautisticsoc" aria-label="Go to my Youtube channel (opens in a new tab)" class="hvr-grow">
-                        <i class="fa fa-youtube" aria-hidden="true"></i>
-                        <span class="sr-only">YouTube</span>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a target="_blank" href="https://www.autism.org.uk/" aria-label="Go to the national autistic society web site (opens in a new tab)" class="hvr-grow">
-                        <i class="fa-brands fa-internet-explorer" aria-hidden="true"></i>
-                        <span class="sr-only">Vimeo</span>
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</div>
-</footer>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>    
-<script src="assets/js/quiz.js"></script>
-<script src="assets/js/scripts.js"></script>
-<script src="https://kit.fontawesome.com/6e6c671d1b.js" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+    </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="assets/js/quiz.js"></script>
+    <script src="assets/js/scripts.js"></script>
+    <script src="https://kit.fontawesome.com/6e6c671d1b.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous">
+    </script>
 </body>
+
 </html>
