Feat: apply shadows to sall page buttons

--- a/quiz.html
+++ b/quiz.html
@@ -37,12 +37,12 @@
             <div class="row pb-3">
                 <div class="center">
                     <!-- button colors to replicate the Autism jigsaw logo -->
-                    <a class="btn btn-lg btn-home" aria-label="Go to the home page (opens in a new tab)"
+                    <a class="btn btn-lg btn-home btn-shadow" aria-label="Go to the home page (opens in a new tab)"
                         href="index.html">Home</a>
-                    <a class="btn btn-lg btn-myth" aria-label="Go to the Myth Buster page (opens in a new tab)"
+                    <a class="btn btn-lg btn-myth btn-shadow" aria-label="Go to the Myth Buster page (opens in a new tab)"
                         href="myth.html">Myths</a>
-                    <a class="btn btn-lg active btn-quiz" aria-label="This is the current page, quiz">Quiz</a>
-                    <a class="btn btn-lg btn-contact" aria-label="Go to the contacts page (opens in a new tab)"
+                    <a class="btn btn-lg active btn-quiz btn-shadow" aria-label="This is the current page, quiz">Quiz</a>
+                    <a class="btn btn-lg btn-contact btn-shadow" aria-label="Go to the contacts page (opens in a new tab)"
                         href="contact.html">Contact</a>
                 </div>
             </div>
@@ -53,7 +53,7 @@
 
     <main>
         <section>
-            <button class="btn-sm" id="myHomeBtn" title="Go to top of page">Top</button>
+            <button class="btn-sm btn-shadow" id="myHomeBtn" title="Go to top of page">Top</button>
             <div class="container-fluid">
                 <div class="row section-details no-gutters solid-border">
                     <br>
@@ -61,7 +61,7 @@
                     </div>
                     <div class="col-md-8 col-sm-10 col-xl-6">
                         <h2 class="sub-title">Test Your Knowledge with the Quiz</h2>
-                        <button class="btn btn-block btn-icon" data-target="#quizInstructions" type="button"
+                        <button class="btn btn-block btn-icon  btn-shadow" data-target="#quizInstructions" type="button"
                             aria-expanded="false">
                             Instructions</button>
                         <div class="content-hidden" id="quizInstructions">
@@ -83,7 +83,7 @@
                                 <br>
                         </div>
                         <div class="center-content pb-5">
-                            <button class="btn btn-lg btn-primary" id="quizTrigger">
+                            <button class="btn btn-lg btn-primary btn-shadow" id="quizTrigger">
                                 Start The Quiz
                             </button>
                         </div>
@@ -111,7 +111,7 @@
                                 <button class="quizBtn">placeholder answer 4</button>
                             </div>
                             <br>
-                            <button id="next-btn">Next</button>
+                            <button id="next-btn" class="btn-shadow">Next</button>
                         </div>
                     </div>
                 </div>
