--- a/404.html
+++ b/404.html
@@ -40,13 +40,13 @@
                 <div class="row pb-3">
                     <div class="center">
                         <!-- button colors to replicate the Autism jigsaw logo -->
-                        <a class="btn btn-lg btn-home" aria-label="Go to the home page (opens in a new tab)"
+                        <a class="btn btn-lg btn-home btn-shadow" aria-label="Go to the home page (opens in a new tab)"
                             href="index.html">Home</a>
-                        <a class="btn btn-lg btn-myth" aria-label="Go to the Myth Buster page (opens in a new tab)"
+                        <a class="btn btn-lg btn-myth btn-shadow" aria-label="Go to the Myth Buster page (opens in a new tab)"
                             href="myth.html">Myths</a>
-                        <a class="btn btn-lg btn-quiz" aria-label="Go to the quiz page (opens in a new tab)"
+                        <a class="btn btn-lg btn-quiz btn-shadow" aria-label="Go to the quiz page (opens in a new tab)"
                             href="quiz.html">Quiz</a>
-                        <a class="btn btn-lg btn-contact" aria-label="Go to the contacts page (opens in a new tab)"
+                        <a class="btn btn-lg btn-contact btn-shadow" aria-label="Go to the contacts page (opens in a new tab)"
                             href="contact.html">Contact</a>
                     </div>
                 </div>
