--- a/contact.html
+++ b/contact.html
@@ -46,13 +46,13 @@
             <div class="row pb-3">
                 <div class="center">
                     <!-- button colors to replicate the Autism jigsaw logo -->
-                    <a class="btn btn-lg btn-home" aria-label="Go to the home page (opens in a new tab)"
+                    <a class="btn btn-lg btn-home btn-shadow" aria-label="Go to the home page (opens in a new tab)"
                         href="index.html">Home</a>
-                    <a class="btn btn-lg btn-myth" aria-label="Go to the Myth Buster page (opens in a new tab)"
+                    <a class="btn btn-lg btn-myth btn-shadow" aria-label="Go to the Myth Buster page (opens in a new tab)"
                         href="myth.html">Myths</a>
-                    <a class="btn btn-lg btn-quiz" aria-label="This is the current page, quiz (opens in a new tab)"
+                    <a class="btn btn-lg btn-quiz btn-shadow" aria-label="This is the current page, quiz (opens in a new tab)"
                         href="quiz.html">Quiz</a>
-                    <a class="btn btn-lg active btn-contact" aria-label="Go to the contacts page">Contact</a>
+                    <a class="btn btn-lg active btn-contact btn-shadow" aria-label="Go to the contacts page">Contact</a>
                 </div>
             </div>
         </div>
@@ -61,7 +61,7 @@
     <!-- start of main content -->
     <main>
         <section>
-            <button class="btn-sm" id="myHomeBtn" title="Go to top of page">Top</button>
+            <button class="btn-sm btn-shadow" id="myHomeBtn" title="Go to top of page">Top</button>
             <div class="container-fluid">
                 <div class="row section-details no-gutters solid-border">
                     <br>
@@ -115,7 +115,7 @@
                             </div>
                             <div class="form-row text-center">
                                 <div class="col">
-                                    <button type="submit" class="btn btn-lg btn-message">Message Me!</button>
+                                    <button type="submit" class="btn btn-lg btn-message btn-shadow">Message Me!</button>
                                 </div>
                             </div>
                         </form>
@@ -139,7 +139,7 @@
                                 <br>
                                 <br>
                                 <div class=" center-content">
-                                    <button id="success" class="btn btn-secondary modal-btn hvr-grow">Close</button>
+                                    <button id="success" class="btn btn-secondary modal-btn hvr-grow btn-shadow">Close</button>
                                 </div>
                             </div>
                         </div>
@@ -164,7 +164,7 @@
                                 <br>
                                 <br>
                                 <div class=" center-content">
-                                    <button id="failure" class="btn btn-secondary modal-btn hvr-grow">Close</button>
+                                    <button id="failure" class="btn btn-secondary modal-btn hvr-grow btn-shadow">Close</button>
                                 </div>
                             </div>
                         </div>
