--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
             <div class="row pb-3">
                 <div class="center">
                     <!-- button colors to replicate the Autism jigsaw logo -->
-                    <a class="btn btn-lg active btn-home" aria-label="This is the current page, home">Home</a>
-                    <a class="btn btn-lg btn-myth" aria-label="Go to the Myth Buster page (opens in a new tab)"
+                    <a class="btn btn-lg active btn-home btn-shadow" aria-label="This is the current page, home">Home</a>
+                    <a class="btn btn-lg btn-myth btn-shadow" aria-label="Go to the Myth Buster page (opens in a new tab)"
                         href="myth.html">Myths</a>
-                    <a class="btn btn-lg btn-quiz" aria-label="Go to the quiz page (opens in a new tab)"
+                    <a class="btn btn-lg btn-quiz btn-shadow" aria-label="Go to the quiz page (opens in a new tab)"
                         href="quiz.html">Quiz</a>
-                    <a class="btn btn-lg btn-contact" aria-label="Go to the contacts page (opens in a new tab)"
+                    <a class="btn btn-lg btn-contact btn-shadow" aria-label="Go to the contacts page (opens in a new tab)"
                         href="contact.html">Contact</a>
                 </div>
             </div>
@@ -52,7 +52,7 @@
 
     <main>
         <section>
-            <button class="btn-sm" id="myHomeBtn" title="Go to top of page">Top</button>
+            <button class="btn-sm btn-shadow" id="myHomeBtn" title="Go to top of page">Top</button>
             <div class="container-fluid">
                 <div class="row section-details no-gutters solid-border">
                     <br>
@@ -113,7 +113,7 @@
                         <div class="col-sm-1 col-md-2 col-lg-3">
                         </div>
                         <div class="col-sm-10 col-md-8 col-lg-6">
-                            <button class="btn btn-block btn-icon" type="button" data-target="#autism1"
+                            <button class="btn btn-block btn-icon btn-shadow" type="button" data-target="#autism1"
                                 aria-expanded="false">
                                 The Autistic Spectrum</button>
                             <div class="content-hidden" id="autism1">
@@ -147,7 +147,7 @@
                         <div class="col-sm-1 col-md-2 col-lg-3">
                         </div>
                         <div class="col-sm-10 col-md-8 col-lg-6">
-                            <button class="btn btn-block btn-icon" type="button" data-target="#autism2"
+                            <button class="btn btn-block btn-icon btn-shadow" type="button" data-target="#autism2"
                                 aria-expanded="false">
                                 Spectrum Versus Constellation</button>
                             <div class="content-hidden" id="autism2">
@@ -174,7 +174,7 @@
                         <div class="col-sm-1 col-md-2 col-lg-3">
                         </div>
                         <div class="col-sm-10 col-md-8 col-lg-6">
-                            <button class="btn btn-block btn-icon" type="button" data-target="#autism3"
+                            <button class="btn btn-block btn-icon btn-shadow" type="button" data-target="#autism3"
                                 aria-expanded="false">
                                 High & Low Functioning</button>
                             <div class="content-hidden" id="autism3">
@@ -210,7 +210,7 @@
                         <div class="col-sm-1 col-md-2 col-lg-3">
                         </div>
                         <div class="col-sm-10 col-md-8 col-lg-6">
-                            <button class="btn btn-block btn-icon" type="button" data-target="#autism4"
+                            <button class="btn btn-block btn-icon btn-shadow" type="button" data-target="#autism4"
                                 aria-expanded="false">
                                 So, To Aspergers or ...</button>
                             <div class="content-hidden" id="autism4">
@@ -244,7 +244,7 @@
                         <div class="col-sm-1 col-md-2 col-lg-3">
                         </div>
                         <div class="col-sm-10 col-md-8 col-lg-6">
-                            <button class="btn btn-block btn-icon" type="button" data-target="#autism5"
+                            <button class="btn btn-block btn-icon btn-shadow" type="button" data-target="#autism5"
                                 aria-expanded="false">
                                 I'm an individual, and..</button>
                             <div class="content-hidden" id="autism5">
@@ -274,7 +274,7 @@
                         <div class="col-sm-1 col-md-2 col-lg-3">
                         </div>
                         <div class="col-sm-10 col-md-8 col-lg-6">
-                            <button class="btn btn-block btn-icon" type="button" data-target="#autism6"
+                            <button class="btn btn-block btn-icon btn-shadow" type="button" data-target="#autism6"
                                 aria-expanded="false">
                                 Hunting High and Low..</button>
                             <div class="content-hidden" id="autism6">
@@ -304,7 +304,7 @@
                         <div class="col-sm-1 col-md-2 col-lg-3">
                         </div>
                         <div class="col-sm-10 col-md-8 col-lg-6">
-                            <button class="btn btn-block btn-icon" type="button" data-target="#autism7"
+                            <button class="btn btn-block btn-icon btn-shadow" type="button" data-target="#autism7"
                                 aria-expanded="false">
                                 When you've met one ..</button>
                             <div class="content-hidden" id="autism7">
@@ -336,7 +336,7 @@
                         <div class="col-sm-1 col-md-2 col-lg-3">
                         </div>
                         <div class="col-sm-10 col-md-8 col-lg-6">
-                            <button class="btn btn-block btn-icon" type="button" data-target="#autism8"
+                            <button class="btn btn-block btn-icon btn-shadow" type="button" data-target="#autism8"
                                 aria-expanded="false">
                                 Chase the Rainbow...</button>
                             <div class="content-hidden" id="autism8">
@@ -364,7 +364,7 @@
                         <div class="col-sm-1 col-md-2 col-lg-3">
                         </div>
                         <div class="col-sm-10 col-md-8 col-lg-6">
-                            <button class="btn btn-block btn-icon" type="button" data-target="#autism9"
+                            <button class="btn btn-block btn-icon btn-shadow" type="button" data-target="#autism9"
                                 aria-expanded="false">
                                 I stim, You stim...</button>
                             <div class="content-hidden" id="autism9">
