--- a/myth.html
+++ b/myth.html
@@ -37,12 +37,12 @@
             <div class="row pb-3">
                 <div class="center">
                     <!-- button colors to replicate the Autism jigsaw logo -->
-                    <a class="btn btn-lg btn-home" aria-label="Go to the Home page (opens in a new tab)"
+                    <a class="btn btn-lg btn-home btn-shadow" aria-label="Go to the Home page (opens in a new tab)"
                         href="index.html">Home</a>
-                    <a class="btn btn-lg active btn-myth" aria-label="This is the current page, Myth">Myths</a>
-                    <a class="btn btn-lg btn-quiz" aria-label="Go to the quiz page (opens in a new tab)"
+                    <a class="btn btn-lg active btn-myth btn-shadow" aria-label="This is the current page, Myth">Myths</a>
+                    <a class="btn btn-lg btn-quiz btn-shadow" aria-label="Go to the quiz page (opens in a new tab)"
                         href="quiz.html">Quiz</a>
-                    <a class="btn btn-lg btn-contact" aria-label="Go to the contacts page (opens in a new tab)"
+                    <a class="btn btn-lg btn-contact btn-shadow" aria-label="Go to the contacts page (opens in a new tab)"
                         href="contact.html">Contact</a>
                 </div>
             </div>
@@ -53,7 +53,7 @@
 
     <main>
         <section>
-            <button class="btn-sm" id="myHomeBtn" title="Go to top of page">Top</button>
+            <button class="btn-sm btn-shadow" id="myHomeBtn" title="Go to top of page">Top</button>
             <div class="container-fluid">
                 <div class="row section-details no-gutters solid-border">
                     <br>
